--- a/app/views/articles/excerpts/_tiny.html.haml
+++ b/app/views/articles/excerpts/_tiny.html.haml
@@ -10,6 +10,6 @@
             = image_tag article.featured_artwork.image.large.url
 
       .p.-t4.-centered
-        %h3.headline.inline.c.-w8= article.title
+        %h3.headline.inline.c.-w4.-serif= article.title
         - if article.authors.any?
           .inline-block.c.-w4 by #{ article.authors.map(&:full_name).to_sentence }
