--- a/app/views/home/contact.html.haml
+++ b/app/views/home/contact.html.haml
@@ -11,7 +11,7 @@
 
 .block.-p2.-pb4
   .wrapper.-small{role: 'layout'}
-    .article.-standard.-formatted
+    .article.-standard.-formatted.-constrained
       :markdown
         #### Email
 
