--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -41,3 +41,25 @@
     padding-right: 10%
 
   ul
+
+  // this should mirror the above
+  &.-constrained
+    & > *:first-child
+      margin-top: 0
+      padding-top: 0
+
+    p, ul, ol, blockquote
+      margin-top: 2rem
+      margin-bottom: 2rem
+
+    h3, h4
+      margin-top: 4em
+      padding-left: 2em
+
+      & + p, & + ul, & + ol, & + blockquote
+        margin-top: 1rem
+        padding-top: 0
+
+      &.-plain
+        margin-top: 0
+        padding-left: 0
