--- a/app/views/layouts/_modal-nav.html.haml
+++ b/app/views/layouts/_modal-nav.html.haml
@@ -1,11 +1,23 @@
 %div.progress-bar.-fixed &nbsp;
-%nav.meta-nav.-fixed.-omnipresent
-  .wrapper.-container{role: 'layout'}
-    .block.-bb
-      .meta-nav_content
-        .left
-          = link_to :root, class: 'meta-nav_item' do
-            .icon
-              %svg{'width': "250px", 'height': "250px", 'viewBox': "0 0 250 250"}
-                <polygon points="127.725586 0.13671875 0.12890625 124.378775 40.8476563 125.152174 40.8476563 244.988073 108.880037 245.519269 108.880037 175.487649 145.784969 175.487649 145.784969 244.988073 214.224502 244.988073 213.595596 124.804687 255.986328 125.152174"></polygon>
-          .meta-nav_item.breadcrumbs= yield :breadcrumbs
+%nav.meta-nav
+  .block.-bb
+    .meta-nav_content
+      .left
+        = link_to :root, class: 'meta-nav_item' do
+          .icon
+            %svg{'width': "250px", 'height': "250px", 'viewBox': "0 0 250 250"}
+              <polygon points="127.725586 0.13671875 0.12890625 124.378775 40.8476563 125.152174 40.8476563 244.988073 108.880037 245.519269 108.880037 175.487649 145.784969 175.487649 145.784969 244.988073 214.224502 244.988073 213.595596 124.804687 255.986328 125.152174"></polygon>
+
+      .center
+        = link_to root_path do
+          .logotype.-small
+            = render partial: 'layouts/images/logo-horizontal'
+
+      .right
+        - if !logged_in?
+          = link_to login_path, class: 'meta-nav_item' do
+            %span Log in
+
+        - if !logged_in? or !current_user.subscriber?
+          = link_to :products, class: 'meta-nav_item -subscribe' do
+            Subscribe
