more subscribe page iteration

--- a/app/assets/stylesheets/components/_hr.sass
+++ b/app/assets/stylesheets/components/_hr.sass
@@ -14,6 +14,6 @@ hr.-separator
   max-width: 8rem
   border-style: solid
   border-color: var(--black)
-  border-width: 0.25rem 0
+  border-width: 0.5px 0
   margin: 0 auto
   padding: 0
